# openrouter-diffusion-estimation

./: .gitignore  PLAN-openrouter-scraping.md  README.md  estimate_token_weighted_model_age.py  extract_figure15_red_timeseries.py  make_figure_comparison_grid.py  make_model_age_scatterplot.py  plot_dollar_weighted_mean_capability_age.py  plot_dollar_weighted_mean_vintage_age.py  pyproject.toml  run_pipeline.sh  smoke_test.py  verify_figure11_percentiles.py  verify_figure15_percentiles.py
scraping/: .gitignore  LIMITATIONS.md  RESULTS.md  analyze_price_ratio.py  build_historical_percentiles.py  compute_percentiles.py  model_mapping.json  run_daily.py  scrape_artificial_analysis.py  scrape_model_activity.py  scrape_openrouter_models.py  scrape_openrouter_rankings.py  sync.py  visualize_comparison.py
scraping/overlays/: compute_price_ratios.py  consistency_report.txt  plot_comparison.py  price_ratio_percentiles.csv  query_ia_snapshots.py  scrape_ia_pricing.py  test_ia_request.py  universe_imputation_experiments.py
scraping/overlays/before_fixes/: consistency_report.txt  price_ratio_percentiles.csv
scraping/overlays/ia_snapshots/: historical_pricing.json  openrouter_2025-10-02.json  openrouter_2025-10-03.json  openrouter_2025-10-04.json  openrouter_2025-10-06.json  openrouter_2025-10-07.json  openrouter_2025-10-12.json  openrouter_2025-10-20.json  openrouter_2025-10-22.json  openrouter_2025-10-31.json  openrouter_2025-11-01.json  openrouter_2025-11-02.json  openrouter_2025-11-08.json  openrouter_2025-11-30.json  openrouter_2025-12-06.json
