[project]
name = "reverse-engineer-pdf"
version = "0.1.0"
description = "Digitize time series from PDF figures and estimate capability age metrics"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
scraping = [
    "httpx>=0.25.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
